; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_statscmds.c_ChooseExtendedStatisticName.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_statscmds.c_ChooseExtendedStatisticName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NAMEDATALEN = common dso_local global i32 0, align 4
@STATEXTNAMENSP = common dso_local global i32 0, align 4
@Anum_pg_statistic_ext_oid = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%s%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i8*, i32)* @ChooseExtendedStatisticName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ChooseExtendedStatisticName(i8* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i8* null, i8** %10, align 8
  %14 = load i32, i32* @NAMEDATALEN, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %11, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %12, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = trunc i64 %15 to i32
  %20 = call i32 @StrNCpy(i8* %17, i8* %18, i32 %19)
  br label %21

21:                                               ; preds = %36, %4
  %22 = load i8*, i8** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i8* @makeObjectName(i8* %22, i8* %23, i8* %17)
  store i8* %24, i8** %10, align 8
  %25 = load i32, i32* @STATEXTNAMENSP, align 4
  %26 = load i32, i32* @Anum_pg_statistic_ext_oid, align 4
  %27 = load i8*, i8** %10, align 8
  %28 = call i32 @PointerGetDatum(i8* %27)
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @ObjectIdGetDatum(i32 %29)
  %31 = call i32 @GetSysCacheOid2(i32 %25, i32 %26, i32 %28, i32 %30)
  store i32 %31, i32* %13, align 4
  %32 = load i32, i32* %13, align 4
  %33 = call i32 @OidIsValid(i32 %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %21
  br label %44

36:                                               ; preds = %21
  %37 = load i8*, i8** %10, align 8
  %38 = call i32 @pfree(i8* %37)
  %39 = trunc i64 %15 to i32
  %40 = load i8*, i8** %7, align 8
  %41 = load i32, i32* %9, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %9, align 4
  %43 = call i32 @snprintf(i8* %17, i32 %39, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %40, i32 %42)
  br label %21

44:                                               ; preds = %35
  %45 = load i8*, i8** %10, align 8
  %46 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %46)
  ret i8* %45
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @StrNCpy(i8*, i8*, i32) #2

declare dso_local i8* @makeObjectName(i8*, i8*, i8*) #2

declare dso_local i32 @GetSysCacheOid2(i32, i32, i32, i32) #2

declare dso_local i32 @PointerGetDatum(i8*) #2

declare dso_local i32 @ObjectIdGetDatum(i32) #2

declare dso_local i32 @OidIsValid(i32) #2

declare dso_local i32 @pfree(i8*) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
